src/components/TodoItem/TodoItem.scss
@import "../../styles/variables";
@import "../../styles/mixins";
@import "../../styles/animations";

.TodoItem {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: $main-color;
  margin-bottom: 10px;
  padding: 10px;
  border-radius: $rounded-shape;

  &:last-child {
    margin-bottom: 0;
  }

  &__check {
    margin-right: 10px;
  }

  &__number {
    margin-right: 10px;
  }

  &__text {
    flex-grow: 1;
    margin-right: 10px;
    letter-spacing: $normal-letter-spacing;
    overflow: auto;

    @include scrollbarX($bg-color, $scrollX-gradient-color);
  }

  &__btn {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: $remove-btn-color;
    border-radius: $round-shape;
    outline: none;
    border: none;
    width: 25px;
    height: 25px;
    cursor: pointer;
  }
}

